--- a/app/src/main/res/layout/activity_storesnearitem.xml
+++ b/app/src/main/res/layout/activity_storesnearitem.xml
@@ -1,53 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/cv"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".StoresNearItemActivity"
-    android:background="@color/colorPrimary"
-    android:padding="16dp"
+    android:layout_height="wrap_content"
+    android:layout_margin="5dp"
     >
-    <android.support.v7.widget.CardView
+
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/cv"
-        >
-        <RelativeLayout
-            android:layout_width="match_parent"
+        android:padding="16dp">
+
+        <ImageView
+            android:id="@+id/store_photo"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="16dp"
-            >
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/store_photo"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:layout_marginEnd="16dp"
-                />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/store_name"
-                android:layout_toEndOf="@+id/store_photo"
-                android:layout_alignParentTop="true"
-                android:textSize="16sp"
-                android:textStyle="bold"
-                />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/store_address"
-                android:layout_toEndOf="@+id/store_photo"
-                android:layout_below="@+id/store_name"
-                />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/store_distance"
-                android:layout_toEndOf="@+id/store_photo"
-                android:layout_below="@+id/store_address"
-                />
-        </RelativeLayout>
-    </android.support.v7.widget.CardView>
-</LinearLayout>
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginEnd="16dp" />
+
+        <TextView
+            android:id="@+id/store_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_toEndOf="@+id/store_photo"
+            android:textSize="16sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/store_address"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/store_name"
+            android:layout_toEndOf="@+id/store_photo" />
+
+        <TextView
+            android:id="@+id/store_distance"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/store_address"
+            android:layout_toEndOf="@+id/store_photo" />
+    </RelativeLayout>
+</android.support.v7.widget.CardView>
