--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,6 +36,8 @@
         android:layout_marginTop="8dp"
         android:background="@drawable/rounded_input"
         android:ems="10"
+        android:textColor="#000"
+        android:textCursorDrawable="@null"
         android:hint="@string/address_field"
         android:inputType="textPostalAddress"
         android:maxLength="95"
