--- a/app/src/main/res/layout/activity_storesnearitem.xml
+++ b/app/src/main/res/layout/activity_storesnearitem.xml
@@ -35,8 +35,10 @@
             android:layout_below="@+id/store_name"
             android:layout_toEndOf="@+id/store_photo" />
 
-        <TextView
-            android:id="@+id/store_distance"
+        <RatingBar
+            android:id="@+id/store_rating"
+            style="?android:attr/ratingBarStyleSmall"
+            android:theme="@style/RatingBar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/store_address"
