--- a/app/src/main/res/layout/activity_storesnearlist.xml
+++ b/app/src/main/res/layout/activity_storesnearlist.xml
@@ -6,7 +6,14 @@
     tools:context=".StoresNearListActivity"
     android:background="@color/colorPrimary"
     android:padding="16dp"
-    >
+    android:orientation="horizontal">
+
+    <ProgressBar
+        android:id="@+id/progressBar1"
+        style="?android:attr/progressBarStyleLarge"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:layout_gravity="center" />
     <android.support.v7.widget.RecyclerView
         android:layout_height="match_parent"
         android:layout_width="match_parent"
