--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,5 @@
 <resources>
     <color name="colorPrimary">#414760</color>
     <color name="colorPrimaryDark">#363b52</color>
-    <color name="colorAccent">#ff0000</color>
+    <color name="colorAccent">#FFF</color>
 </resources>
