--- a/app/src/main/res/layout/activity_storesnearitem.xml
+++ b/app/src/main/res/layout/activity_storesnearitem.xml
@@ -38,10 +38,10 @@
         <RatingBar
             android:id="@+id/store_rating"
             style="?android:attr/ratingBarStyleSmall"
-            android:theme="@style/RatingBar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/store_address"
-            android:layout_toEndOf="@+id/store_photo" />
+            android:layout_toEndOf="@+id/store_photo"
+            android:theme="@style/RatingBar" />
     </RelativeLayout>
 </android.support.v7.widget.CardView>
