--- a/app/src/main/res/layout/activity_store_item_view.xml
+++ b/app/src/main/res/layout/activity_store_item_view.xml
@@ -72,16 +72,17 @@
                 android:id="@+id/button3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="16dp"
-                android:layout_marginEnd="8dp"
                 android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="16dp"
+                android:onClick="viewInAR"
                 android:text="@string/button_ar"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent" />
 
             <ImageView
-                android:id="@+id/imageView2"
+                android:id="@+id/productImg"
                 android:layout_width="208dp"
                 android:layout_height="112dp"
                 android:layout_marginEnd="8dp"
@@ -117,7 +118,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.24"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/imageView2" />
+                app:layout_constraintTop_toBottomOf="@+id/productImg" />
         </android.support.constraint.ConstraintLayout>
 
     </LinearLayout>
