Added AR Reset and Return button. Moved Coord Search to MainActivity. Added using location device search. Added Web. Maps and Phone event on click on product view.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,17 +4,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
-    android:background="@color/colorPrimary">
+    android:background="@color/colorPrimary"
+    tools:context=".MainActivity">
 
     <TextView
         android:id="@+id/logo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
         android:fontFamily="serif"
         android:text="@string/app_name"
         android:textColor="#FFF"
@@ -29,20 +29,20 @@
     <EditText
         android:id="@+id/address_input"
         android:layout_width="0dp"
-        android:layout_height="50dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_height="70dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
         android:background="@drawable/rounded_input"
         android:ems="10"
-        android:textColor="#000"
-        android:textCursorDrawable="@null"
         android:hint="@string/address_field"
         android:inputType="textPostalAddress"
         android:maxLength="95"
         android:padding="10dp"
         android:textAlignment="center"
+        android:textColor="#000"
+        android:textCursorDrawable="@null"
         android:textSize="15sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -54,10 +54,10 @@
         android:id="@+id/button"
         android:layout_width="0dp"
         android:layout_height="39dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
         android:background="@drawable/rounded_button"
         android:onClick="onSearchClick"
         android:text="@string/button_search"
@@ -70,4 +70,31 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/address_input"
         app:layout_constraintVertical_bias="0.009" />
+
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="99dp"
+        android:layout_height="94dp"
+        android:clickable="true"
+        android:onClick="onUserCoords"
+        app:layout_constraintBottom_toBottomOf="@+id/address_input"
+
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/address_input"
+        app:layout_constraintVertical_bias="0.642"
+        app:srcCompat="@drawable/maps" />
+
+    <TextView
+        android:id="@+id/txt_Searching"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="2dp"
+        android:text="Pulling Coordinates . . ."
+        android:textAlignment="center"
+        android:textColor="#FFF"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
 </android.support.constraint.ConstraintLayout>
