--- a/app/src/main/res/layout/activity_store_item_view.xml
+++ b/app/src/main/res/layout/activity_store_item_view.xml
@@ -10,8 +10,8 @@
         android:id="@+id/imageView"
         android:layout_width="392dp"
         android:layout_height="133dp"
-        android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.51"
         app:layout_constraintStart_toStartOf="parent"
@@ -21,10 +21,9 @@
     <LinearLayout
         android:layout_width="373dp"
         android:layout_height="420dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -41,27 +40,32 @@
         <RatingBar
             android:id="@+id/storeitem_rating"
             style="@android:style/Widget.Material.Light.RatingBar.Small"
-            android:layout_width="226dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:numStars="5"
+            android:stepSize="0.1"
             android:theme="@style/RatingBar" />
+
 
         <TextView
             android:id="@+id/storeitem_address"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:onClick="openMaps"
             android:text="TextView" />
 
         <TextView
             android:id="@+id/storeitem_website"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:onClick="openWebsite"
             android:text="TextView" />
 
         <TextView
             android:id="@+id/storeitem_phone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:onClick="openPhone"
             android:text="TextView" />
 
         <android.support.constraint.ConstraintLayout
@@ -85,9 +89,9 @@
                 android:id="@+id/productImg"
                 android:layout_width="208dp"
                 android:layout_height="112dp"
-                android:layout_marginEnd="8dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.496"
                 app:layout_constraintStart_toStartOf="parent"
@@ -98,9 +102,9 @@
                 android:id="@+id/textView7"
                 android:layout_width="wrap_content"
                 android:layout_height="16dp"
-                android:layout_marginEnd="8dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="16dp"
+                android:layout_marginEnd="8dp"
                 android:text="@string/featured_product"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.298"
@@ -111,12 +115,25 @@
                 android:id="@+id/storeitem_price"
                 android:layout_width="wrap_content"
                 android:layout_height="16dp"
-                android:layout_marginEnd="8dp"
                 android:layout_marginStart="8dp"
-                android:layout_marginTop="13dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="8dp"
                 android:text="TextView"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.24"
+                app:layout_constraintHorizontal_bias="0.749"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/productImg" />
+
+            <TextView
+                android:id="@+id/storeitem_description"
+                android:layout_width="130dp"
+                android:layout_height="62dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="8dp"
+                android:text="TextView"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.325"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/productImg" />
         </android.support.constraint.ConstraintLayout>
