--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,11 +29,11 @@
     <EditText
         android:id="@+id/address_input"
         android:layout_width="0dp"
-        android:layout_height="70dp"
+        android:layout_height="60dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
         android:background="@drawable/rounded_input"
         android:ems="10"
         android:hint="@string/address_field"
@@ -51,13 +51,13 @@
         app:layout_constraintVertical_bias="0.499" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/button_search"
         android:layout_width="0dp"
-        android:layout_height="39dp"
+        android:layout_height="60dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
         android:background="@drawable/rounded_button"
         android:onClick="onSearchClick"
         android:text="@string/button_search"
@@ -73,12 +73,11 @@
 
     <ImageView
         android:id="@+id/imageView3"
-        android:layout_width="99dp"
-        android:layout_height="94dp"
+        android:layout_width="75dp"
+        android:layout_height="79dp"
         android:clickable="true"
         android:onClick="onUserCoords"
         app:layout_constraintBottom_toBottomOf="@+id/address_input"
-
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/address_input"
         app:layout_constraintVertical_bias="0.642"
