--- a/app/src/main/res/layout/activity_store_item_view.xml
+++ b/app/src/main/res/layout/activity_store_item_view.xml
@@ -9,7 +9,7 @@
     <ImageView
         android:id="@+id/imageView2"
         android:layout_width="0dp"
-        android:layout_height="57dp"
+        android:layout_height="164dp"
         android:adjustViewBounds="true"
         android:scaleType="fitStart"
         app:layout_constraintEnd_toEndOf="parent"
@@ -21,14 +21,15 @@
     <TextView
         android:id="@+id/storeitem_name"
         android:layout_width="match_parent"
-        android:layout_height="42dp"
+        android:layout_height="39dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:text="TextView"
         android:textColor="@android:color/background_light"
-        android:textSize="16sp"
+        android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -50,7 +51,7 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:text=""
-            android:textSize="16sp"
+            android:textSize="24sp"
             android:textStyle="bold" />
 
         <RatingBar
@@ -58,9 +59,7 @@
             style="@android:style/Widget.Material.RatingBar.Indicator"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:numStars="5"
-            android:stepSize="0.1"
-            android:theme="@style/RatingBar" />
+            android:numStars="5" />
 
 
         <TextView
@@ -68,7 +67,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:onClick="openMaps"
-            android:text="TextView" />
+            android:text="TextView"
+            android:textColor="#FFF"
+            android:textSize="14sp" />
 
         <TextView
             android:id="@+id/storeitem_website"
@@ -76,7 +77,8 @@
             android:layout_height="wrap_content"
             android:onClick="openWebsite"
             android:text="TextView"
-            android:textColor="@android:color/holo_blue_dark" />
+            android:textColor="@android:color/holo_blue_bright"
+            android:textSize="14sp" />
 
         <TextView
             android:id="@+id/storeitem_phone"
@@ -84,7 +86,8 @@
             android:layout_height="wrap_content"
             android:onClick="openPhone"
             android:text="TextView"
-            android:textColor="@android:color/holo_blue_dark" />
+            android:textColor="@android:color/holo_blue_bright"
+            android:textSize="14sp" />
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
@@ -92,68 +95,106 @@
 
             <Button
                 android:id="@+id/button3"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="16dp"
+                android:layout_marginBottom="8dp"
                 android:layout_marginEnd="8dp"
-                android:layout_marginStart="8dp"
+                android:layout_marginStart="14dp"
+                android:layout_marginTop="8dp"
+                android:backgroundTint="@color/colorPrimary"
                 android:onClick="viewInAR"
                 android:text="@string/button_ar"
+                android:textColor="#FFF"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent" />
+                app:layout_constraintEnd_toStartOf="@+id/guideline3"
+                app:layout_constraintStart_toStartOf="@+id/guideline"
+                app:layout_constraintTop_toBottomOf="@+id/storeitem_description" />
 
             <ImageView
                 android:id="@+id/productImg"
-                android:layout_width="208dp"
+                android:layout_width="0dp"
                 android:layout_height="112dp"
                 android:layout_marginEnd="8dp"
-                android:layout_marginStart="8dp"
+                android:layout_marginStart="14dp"
                 android:layout_marginTop="8dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.496"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView7"
+                android:minHeight="112dp"
+                android:minWidth="207dp"
+                android:scaleType="fitXY"
+                app:layout_constraintEnd_toStartOf="@+id/guideline3"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="@+id/guideline"
+                app:layout_constraintTop_toBottomOf="@+id/storeitem_price"
                 app:srcCompat="@color/colorPrimary" />
 
             <TextView
                 android:id="@+id/textView7"
                 android:layout_width="wrap_content"
-                android:layout_height="16dp"
-                android:layout_marginEnd="8dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="16dp"
+                android:layout_height="23dp"
+                android:layout_marginStart="14dp"
+                android:layout_marginTop="20dp"
                 android:text="@string/featured_product"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.298"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                android:textSize="20sp"
+                android:textStyle="bold"
+                app:layout_constraintStart_toStartOf="@+id/guideline"
+                app:layout_constraintTop_toTopOf="@+id/guideline2" />
 
             <TextView
                 android:id="@+id/storeitem_price"
-                android:layout_width="wrap_content"
-                android:layout_height="16dp"
+                android:layout_width="200dp"
+                android:layout_height="15dp"
                 android:layout_marginEnd="8dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="16dp"
+                android:layout_marginStart="14dp"
+                android:layout_marginTop="4dp"
                 android:text="TextView"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.784"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/productImg" />
+                android:textStyle="bold"
+                app:layout_constraintEnd_toStartOf="@+id/guideline3"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="@+id/guideline"
+                app:layout_constraintTop_toBottomOf="@+id/textView7" />
 
             <TextView
                 android:id="@+id/storeitem_description"
-                android:layout_width="130dp"
-                android:layout_height="195dp"
+                android:layout_width="0dp"
+                android:layout_height="84dp"
                 android:layout_marginEnd="8dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="16dp"
+                android:layout_marginStart="14dp"
+                android:layout_marginTop="8dp"
                 android:text="TextView"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.325"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/guideline3"
+                app:layout_constraintStart_toStartOf="@+id/guideline"
+                app:layout_constraintTop_toBottomOf="@+id/textView" />
+
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="14dp"
+                android:layout_marginTop="8dp"
+                android:text="@string/desc"
+                android:textStyle="bold"
+                app:layout_constraintStart_toStartOf="@+id/guideline"
                 app:layout_constraintTop_toBottomOf="@+id/productImg" />
+
+            <android.support.constraint.Guideline
+                android:id="@+id/guideline"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintGuide_begin="58dp" />
+
+            <android.support.constraint.Guideline
+                android:id="@+id/guideline2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                app:layout_constraintGuide_begin="14dp" />
+
+            <android.support.constraint.Guideline
+                android:id="@+id/guideline3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintGuide_end="77dp" />
         </android.support.constraint.ConstraintLayout>
 
     </LinearLayout>
