--- a/app/src/main/res/layout/activity_storesnearitem.xml
+++ b/app/src/main/res/layout/activity_storesnearitem.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/cv"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -13,18 +14,18 @@
 
         <ImageView
             android:id="@+id/store_photo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginEnd="16dp" />
+            android:layout_width="35dp"
+            android:layout_height="56dp"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            app:srcCompat="@drawable/arrow" />
 
         <TextView
             android:id="@+id/store_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
-            android:layout_toEndOf="@+id/store_photo"
+            android:layout_alignParentStart="true"
             android:textSize="16sp"
             android:textStyle="bold" />
 
@@ -33,7 +34,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/store_name"
-            android:layout_toEndOf="@+id/store_photo" />
+            android:layout_alignParentStart="true" />
 
         <RatingBar
             android:id="@+id/store_rating"
@@ -41,7 +42,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/store_address"
-            android:layout_toEndOf="@+id/store_photo"
+            android:layout_alignParentStart="true"
             android:theme="@style/RatingBar" />
     </RelativeLayout>
 </android.support.v7.widget.CardView>
