--- a/app/src/main/res/layout/activity_store_item_view.xml
+++ b/app/src/main/res/layout/activity_store_item_view.xml
@@ -160,6 +160,7 @@
                 android:layout_marginStart="14dp"
                 android:layout_marginTop="8dp"
                 android:text="TextView"
+                android:textSize="12sp"
                 app:layout_constraintEnd_toStartOf="@+id/guideline3"
                 app:layout_constraintStart_toStartOf="@+id/guideline"
                 app:layout_constraintTop_toBottomOf="@+id/textView" />
@@ -180,7 +181,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                app:layout_constraintGuide_begin="58dp" />
+                app:layout_constraintGuide_begin="68dp" />
 
             <android.support.constraint.Guideline
                 android:id="@+id/guideline2"
@@ -194,7 +195,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                app:layout_constraintGuide_end="77dp" />
+                app:layout_constraintGuide_end="75dp" />
         </android.support.constraint.ConstraintLayout>
 
     </LinearLayout>
