--- a/app/src/main/res/layout/activity_store_item_view.xml
+++ b/app/src/main/res/layout/activity_store_item_view.xml
@@ -25,6 +25,8 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
+        android:singleLine="true"
+        android:ellipsize="end"
         android:text="TextView"
         android:textColor="@android:color/background_light"
         android:textSize="24sp"
