--- a/app/src/main/res/layout/activity_storesnearitem.xml
+++ b/app/src/main/res/layout/activity_storesnearitem.xml
@@ -22,27 +22,33 @@
 
         <TextView
             android:id="@+id/store_name"
-            android:layout_width="wrap_content"
+            android:ellipsize="end"
+            android:singleLine="true"
+            android:layout_width="260dp"
+            android:maxWidth="270dp"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
             android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
             android:textSize="16sp"
             android:textStyle="bold" />
 
         <TextView
             android:id="@+id/store_address"
-            android:layout_width="wrap_content"
+            android:ellipsize="end"
+            android:singleLine="true"
+            android:layout_width="260dp"
+            android:maxWidth="270dp"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/store_name"
-            android:layout_alignParentStart="true" />
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/store_name" />
 
         <RatingBar
             android:id="@+id/store_rating"
             style="?android:attr/ratingBarStyleSmall"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/store_address"
-            android:layout_alignParentStart="true"
+            android:layout_alignBottom="@+id/store_photo"
+            android:layout_alignStart="@+id/store_name"
             android:theme="@style/RatingBar" />
     </RelativeLayout>
 </android.support.v7.widget.CardView>
